// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls-Input/InputConnected:Phone FlagPosition 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo__flex ws-flex-column ws-align-items-center"
  >
    <div
      class="controlsDemo__wrapper controlsDemo__flex"
    >
      <div
        class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
      >
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                flagPosition = start
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                name="$$wasaby$async$loading"
              />
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                flagPosition = end
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
              <div
                name="$$wasaby$async$loading"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/InputConnected:Phone FlagVisible 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo__flex ws-flex-column ws-align-items-center"
  >
    <div
      class="controlsDemo__wrapper controlsDemo__flex"
    >
      <div
        class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
      >
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                flagVisible = true
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                name="$$wasaby$async$loading"
              />
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                flagVisible = false
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/InputConnected:Phone OnlyMobile 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo__flex ws-flex-column ws-align-items-center"
  >
    <div
      class="controlsDemo__wrapper controlsDemo__flex"
    >
      <div
        class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
      >
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined "
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                onlyMobile = true
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                />
                <div
                  class="controls-InputBase__placeholder controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined "
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                onlyMobile = false
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                />
                <div
                  class="controls-InputBase__placeholder controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/InputConnected:Phone defaultValue 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo__flex ws-flex-column ws-align-items-center"
  >
    <div
      class="controlsDemo__wrapper controlsDemo__flex"
    >
      <div
        class="controlsDemo__wrapper controlsDemo_fixedWidth400 tw-flex tw-flex-col"
      >
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                defaultValue = 2
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="8 (800) 335-35-35"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-col undefined "
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                defaultValue is empty
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                />
                <div
                  class="controls-InputBase__placeholder controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controls-Input/InputConnected:Phone label 1`] = `
<div>
  <div
    class="controlsDemo__wrapper controlsDemo__flex ws-flex-column ws-align-items-center"
  >
    <div
      class="controlsDemo__wrapper controlsDemo__flex"
    >
      <div
        class="controlsDemo__wrapper controlsDemo_fixedWidth300 tw-flex tw-flex-col"
      >
        <div
          class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default controls-margin_top-m controls-margin_top-m controls-Input-connected_filled tw-w-full"
          tabindex="0"
        >
          <div
            class="controls-Render__wrapper"
          >
            <span
              class="controls-Render__baseline"
            >
              ﻿
            </span>
            <div
              class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
              data-qa="controls-Render__field"
            >
              <input
                autocapitalize="off"
                autocomplete="off"
                autocorrect="off"
                class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                inputmode="tel"
                name="ws-input_1996-06-20"
                spellcheck="true"
                tabindex="0"
                type="text"
                value="+7 (999) 999-99-99"
              />
              <div
                class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
              >
                <div
                  class="controls-Render__placeholder controls-Render__placeholder_overflow"
                >
                  Введите номер
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-col controls-margin_top-m controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-undefined controls-Label__caption_fontsize-default controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                label top
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default controls-margin_top-m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
        >
          <a
            class="controls-Label controls-Label_underline_none tw-min-w-0 tw-flex-shrink"
          >
            <div
              class="controls-Label__wrapper"
            >
              <div
                class="controls-Label__caption controls-fontsize-m  controls-Label__caption_fontColorStyle-label controls-Label__caption_underline_none controls-Label__caption_underline_none_edit ws-ellipsis"
              >
                label start
              </div>
              
            </div>
          </a>
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default controls-input_label_min-input-content controls-margin_top-m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw-flex controls-max-w-full tw-flex-row tw-items-baseline controls-margin_top-m controls-Input-connected_filled"
        >
          <span
            class="controls-icon_size-s controls-icon_style-secondary icon-SabyBird controls-icon controls-margin_right-s"
          />
          <div
            class="controls-Render js-controls-Render controls-Render_border-top-empty controls-Render_border-bottom controls-Render_background-same controls-Render_textAlign-left controls-Render_borderRadius controls-Render_state-valid controls-fontsize-m controls-fontsize-m controls-fontweight-default controls-Render-fontsize-m controls-text-default controls-Render_state-valid_caretFilled controls-inlineheight-m controls-Render-inlineheight-m  controls-Phone controls_Phone_theme-default controls-margin_top-m"
            tabindex="0"
          >
            <div
              class="controls-Render__wrapper"
            >
              <span
                class="controls-Render__baseline"
              >
                ﻿
              </span>
              <div
                class="controls-InputBase__field controls-InputBase__field_margin-null controls-InputBase__field_theme_default_margin-null controls-Render__field controls-Render__field_textAlign_left ws-ellipsis controls-Render__field_zIndex"
                data-qa="controls-Render__field"
              >
                <input
                  autocapitalize="off"
                  autocomplete="off"
                  autocorrect="off"
                  class="controls-Field js-controls-Field controls-InputBase__nativeField controls-InputBase__nativeField_caretFilled controls-InputBase__nativeField_caretFilled_theme_default"
                  inputmode="tel"
                  name="ws-input_1996-06-20"
                  spellcheck="true"
                  tabindex="0"
                  type="text"
                  value="+7 (999) 999-99-99"
                />
                <div
                  class="controls-InputBase__placeholder ws-hidden controls-InputBase__placeholder_displayed-under-caret"
                >
                  <div
                    class="controls-Render__placeholder controls-Render__placeholder_overflow"
                  >
                    Введите номер
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
